--- a/style.css
+++ b/style.css
@@ -253,3 +253,43 @@ td{
     transform: translateY(-2px);
     box-shadow: 0px 10px 20px 2px var(--primary-color-contrast);
 }
+
+/* shop section */
+
+.shop{
+    display: flex;
+    justify-content: space-between;
+    margin: 40px;
+    /* align-items: center; */
+}
+
+.img_shop{
+    width: 100%;
+    height: 45vh;
+    border-radius: 14px 14px 0 0;
+}
+
+.shop_box{
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    border-radius: 15px;
+    transition: all ease 0.2s;
+    border: 1px solid var(--primary-color-contrast);
+    box-shadow: 0px 5px 10px 0px var(--primary-color-contrast); 
+    width: 25%;
+    height: 100%;
+}
+
+.shop_box:hover{
+    transform: translateY(-2px);
+    box-shadow: 0px 10px 20px 2px var(--primary-color-contrast);
+}
+
+.shop_text{
+    text-align: center;
+    margin-top: 20px;
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 1.1rem;
+}
