--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ ul{
     gap: 20px;
     list-style: none;
     font-weight: 700;
+    font-size: 1.3rem;
 }
 
 a{
@@ -272,13 +273,14 @@ td{
 .shop_box{
     display: flex;
     flex-direction: column;
+    justify-content: space-evenly;
     gap: 12px;
     border-radius: 15px;
     transition: all ease 0.2s;
     border: 1px solid var(--primary-color-contrast);
     box-shadow: 0px 5px 10px 0px var(--primary-color-contrast); 
     width: 25%;
-    height: 100%;
+    height: 67vh;
 }
 
 .shop_box:hover{
@@ -286,10 +288,36 @@ td{
     box-shadow: 0px 10px 20px 2px var(--primary-color-contrast);
 }
 
-.shop_text{
+.shop_slogan{
     text-align: center;
     margin-top: 20px;
     text-transform: uppercase;
     font-weight: 600;
     font-size: 1.1rem;
+}
+
+.shop_item-description{
+    margin: 0 10px 10px 20px;
+    font-size: .8rem;
+}
+
+.price_btn{
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-bottom: 10px;
+}
+
+.price{
+    font-size: 1.3rem;
+    font-weight: 600;
+}
+
+h3{
+    color: #cfffdc;
+}
+
+.description{
+    font-style: italic;
+    font-size: .7rem;
 }
