--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 :root{
     --primary-color-text: #000;
     --primary-color-contrast: #0FFF50;
+    --secondary-color: #cfffdc;
     --font-size: 1rem;
     --small-font-size: .8rem;
 }
@@ -117,7 +118,7 @@ li:hover::after{
 
 h2{
     color: var(--primary-color-contrast);
-    text-shadow: 9px 1px 15px rgba(207, 255, 220, 1);
+    text-shadow: 9px 1px 15px var(--secondary-color);
     text-align: center;
     font-size: 2.3rem;
     font-weight: 700;
@@ -198,7 +199,7 @@ h2{
 }
 
 .important_text{
-    color: #0FFF50;
+    color: var(--primary-color-contrast);
 }
 
 .classes_table{
@@ -230,7 +231,7 @@ tr{
 
 th{
     font-size: 1.5rem;
-    -webkit-text-stroke: .5px #0FFF50;
+    -webkit-text-stroke: .5px var(--primary-color-contrast);
 }
 
 td{
@@ -257,11 +258,10 @@ td{
 
 /* shop section */
 
-.shop{
+.shop_container{
     display: flex;
     justify-content: space-between;
     margin: 40px;
-    /* align-items: center; */
 }
 
 .img_shop{
@@ -273,14 +273,13 @@ td{
 .shop_box{
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
     gap: 12px;
     border-radius: 15px;
     transition: all ease 0.2s;
     border: 1px solid var(--primary-color-contrast);
     box-shadow: 0px 5px 10px 0px var(--primary-color-contrast); 
     width: 25%;
-    height: 67vh;
+    height: 100%;
 }
 
 .shop_box:hover{
@@ -303,21 +302,39 @@ td{
 
 .price_btn{
     display: flex;
-    justify-content: center;
+    align-items: center;
     gap: 20px;
     margin-bottom: 10px;
 }
 
 .price{
-    font-size: 1.3rem;
+    font-size: 2rem;
     font-weight: 600;
+    color: var(--secondary-color);
 }
 
 h3{
-    color: #cfffdc;
+    color: var(--secondary-color);
 }
 
 .description{
     font-style: italic;
     font-size: .7rem;
+}
+
+.btn{
+    background: none;
+    border: none;
+    border-radius: 10em;
+    background-color: var(--primary-color-contrast);
+    padding: .25rem 2rem;
+    cursor: pointer;
+    font-size: 1.1rem;
+    text-transform: uppercase;
+    font-weight: 600;
+}
+
+.btn:hover{
+    background-color: var(--secondary-color);
+    border: 3px solid var(--primary-color-contrast);
 }
