--- a/style.css
+++ b/style.css
@@ -8,15 +8,18 @@
 }
 
 :root{
-    --primary-color-text: #000;
-    --primary-color-contrast: #0FFF50;
-    --secondary-color: #cfffdc;
+    /* --primary-color: #000; */
+    --primary-color: #00539C;
+    /* --primary-color-contrast: #0FFF50; */
+    --primary-color-contrast: #EEA47F;
+    /* --secondary-color: #cfffdc; */
+    --secondary-color:#f1b698;
     --font-size: 1rem;
     --small-font-size: .8rem;
 }
 
 body{
-    background-color: var(--primary-color-text);
+    background-color: var(--primary-color);
     color: white;
     font-family: 'Poppins', sans-serif;
     max-width: 2200px;
@@ -33,7 +36,7 @@ body{
 .logo{
     font-family: 'Skranji', sans-serif;
     font-size: 3rem;
-    color: var(--primary-color-text);
+    color: var(--primary-color);
     text-transform: capitalize;
     margin-left: 20px;
     position: relative;
@@ -72,7 +75,7 @@ ul{
 
 a{
     text-decoration: none;
-    color: var(--primary-color-text);
+    color: var(--primary-color);
 }
 
 .nav_right_section{
@@ -91,7 +94,7 @@ li::after{
     height: 3px;
     bottom: 0;
     left: 0;
-    background-color: var(--primary-color-text);
+    background-color: var(--primary-color);
     transform-origin: center;
     transition: transform 0.25s ease-out;
 }
@@ -104,10 +107,10 @@ li:hover::after{
 /* about section */
 
 .about{
-    margin: 40px 0 40px 100px;
-    border-radius: 15px;
+    margin: 60px 0 40px 100px;
+    border-radius: 17px;
     transition: all ease 0.2s;
-    border: 1px solid var(--primary-color-contrast);
+    /* border: 3px solid var(--primary-color-contrast); */
     box-shadow: 0px 5px 10px 0px var(--primary-color-contrast); 
     width: 70%;
 }
@@ -126,6 +129,8 @@ li:hover::after{
 .img_about{
     max-width: 40%;
     border-radius: 14px 0 0 14px;
+    object-fit: cover;
+    object-position: 20%;
 }
 
 .about_box{
@@ -137,12 +142,12 @@ li:hover::after{
 
 h2{
     color: var(--primary-color-contrast);
-    text-shadow: 9px 1px 15px var(--secondary-color);
+    /* text-shadow: 9px 1px 15px var(--secondary-color); */
     text-align: center;
     font-size: 2.3rem;
     font-weight: 700;
     text-transform: capitalize;
-    -webkit-text-stroke: .5px var(--primary-color-text);
+    -webkit-text-stroke: .5px var(--primary-color);
 }
 
 .about_text{
@@ -174,7 +179,7 @@ h2{
     margin: 60px 50px 40px 300px;
     border-radius: 15px;
     transition: all ease 0.2s;
-    border: 1px solid var(--primary-color-contrast);
+    /* border: 3px dashed var(--primary-color-contrast); */
     box-shadow: 0px 5px 10px 0px var(--primary-color-contrast); 
     width: 70%;
 }
@@ -187,7 +192,7 @@ h2{
 .training_box{
     display: flex;
     flex-direction: column;
-    margin: 10px 0 20px 20px;
+    margin: 0 0 20px 20px;
 }
 
 .small_text{
@@ -199,9 +204,67 @@ h2{
 .img_training{
     width: 40%;
     border-radius: 0 14px 14px 0;
+    object-fit: cover;
+    object-position: 20%;
 }
 
 /* classes section */
+
+.classes_main{
+    margin: 60px 0 20px 100px;
+    border-radius: 17px;
+    transition: all ease 0.2s;
+    /* border: 3px solid var(--primary-color-contrast); */
+    box-shadow: 0px 5px 10px 0px var(--primary-color-contrast); 
+    width: 70%;
+    display: flex;
+}
+
+.classes_main:hover{
+    transform: translateY(-2px);
+    box-shadow: 0px 10px 20px 2px var(--primary-color-contrast);
+}
+
+.classes_main--img{
+    width: 40%;
+    border-radius: 14px 0 0 14px;
+    object-fit: cover;
+    object-position: 20%;
+}
+
+.classes_main--text{
+    display: flex;
+    flex-direction: column;
+    max-width: 100%;
+    margin-bottom: 20px;
+}
+
+.link{
+    color: var(--primary-color-contrast);
+    padding: 10px 0 0 0;
+    font-style: italic;
+    font-weight: 600;
+    position: relative;
+    width: 32%;
+}
+
+.link::after{
+    content: '';
+    position: absolute;
+    width: 100%;
+    transform: scaleX(0);
+    height: 3px;
+    bottom: -4px;
+    left: 0;
+    background-color: var(--primary-color-contrast);
+    transform-origin: center;
+    transition: transform 0.25s ease-out;
+}
+
+.link:hover::after{
+    transform: scaleX(1);
+    transform-origin: center;
+}
 
 .classes_text{
     text-align: center;
@@ -317,6 +380,7 @@ td{
 .shop_item-description{
     margin: 0 10px 10px 20px;
     font-size: .8rem;
+    min-height: 175px;
 }
 
 .price_btn{
@@ -370,6 +434,8 @@ h3{
     max-width: 100%;
     border: 1px solid var(--primary-color-contrast);
     border-radius: 15px 0 0 15px;
+    object-fit: cover;
+    object-position: 20%;
 }
 
 .form_contact{
@@ -392,24 +458,24 @@ form{
 label{
     font-size: 1.2rem;
     font-weight: 600;
-    color: var(--primary-color-text);
+    color: var(--primary-color);
     font-weight: 600;
 }
 
 input{
-    border: solid 1px var(--primary-color-text);
+    border: solid 1px var(--primary-color);
     padding: 5px;
     border-radius: .25rem;
 }
 
 select{
-    border: solid 1px var(--primary-color-text);
+    border: solid 1px var(--primary-color);
     padding: 5px;
 }
 
 .form_btn{
     cursor: pointer;
-    background: var(--primary-color-text);
+    background: var(--primary-color);
     color: var(--primary-color-contrast);
     border: none;
     width: 60%;
@@ -422,20 +488,15 @@ select{
 }
 
 .form_btn:hover{
-    /* border: .5px solid var(--primary-color-text); */
+    /* border: .5px solid var(--primary-color); */
     background: var(--secondary-color);
-    color: var(--primary-color-text);
+    color: var(--primary-color);
     text-transform: uppercase;
 }
 
 .form_contact:hover{
     transform: translateY(-2px);
     box-shadow: 0px 10px 20px 2px var(--primary-color-contrast);
-}
-
-#shop_section{
-    padding-top: 80px;
-    margin-top: -80px;
 }
 
 /* footer */
@@ -447,7 +508,7 @@ footer{
 
 .footer_header{
     text-transform: capitalize;
-    color: var(--secondary-color);
+    color: var(--primary-color);
     margin-left: 20px;
 }
 
@@ -462,7 +523,7 @@ footer{
     display: flex;
     flex-direction: column;
     gap: 10px;
-    color: var(--primary-color-text);
+    color: var(--primary-color);
 }
 
 iframe{
@@ -471,7 +532,7 @@ iframe{
 }
 
 h1{
-    -webkit-text-stroke: 1px var(--primary-color-text);
+    -webkit-text-stroke: 1px var(--primary-color);
 }
 
 h4{
@@ -483,6 +544,6 @@ h4{
     font-style: italic;
 }
 
-.emial{
+.email{
     text-decoration: underline;
 }
