--- a/style.css
+++ b/style.css
@@ -430,15 +430,17 @@ h3{
 /* contact section */
 
 .contact{
-    display: flex;
+    display: grid;
+    place-items: center;
+    /* display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-top: 60px;
+    margin-top: 60px; */
 } 
 
 .contact_img{
-    max-width: 100%;
-    border: 1px solid var(--primary-color-contrast);
+    width: 250px;
+    /* border: 1px solid var(--primary-color-contrast); */
     border-radius: 15px 0 0 15px;
     object-fit: cover;
     object-position: 20%;
@@ -455,9 +457,9 @@ h3{
 form{
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     gap: 10px;
-    background: var(--primary-color-contrast);
+    /* background: var(--primary-color-contrast); */
     padding: 10px 10px;
     border-radius: 0 15px 15px 0;
 }
@@ -465,29 +467,30 @@ form{
 label{
     font-size: 1.2rem;
     font-weight: 600;
-    color: var(--primary-color);
+    color: var(--primary-color-contrast);
     font-weight: 600;
 }
 
 input{
-    border: solid 1px var(--primary-color);
+    border: solid 2px var(--primary-color-contrast);
     padding: 5px;
     border-radius: .25rem;
 }
 
 select{
-    border: solid 1px var(--primary-color);
+    border: solid 2px var(--primary-color-contrast);
     padding: 5px;
 }
 
 .form_btn{
     cursor: pointer;
-    background: var(--primary-color);
-    color: var(--primary-color-contrast);
+    background: var(--primary-color-contrast);
+    color: var(--primary-color);
     border: none;
+    border-radius: 40px;
     width: 60%;
     padding: 5px 5px;
-    margin-top: 20px;
+    margin: 10px 0;
     align-self: center;
     font-weight: 600;
     text-transform: capitalize;
@@ -495,10 +498,9 @@ select{
 }
 
 .form_btn:hover{
-    /* border: .5px solid var(--primary-color); */
     background: var(--secondary-color);
-    color: var(--primary-color);
     text-transform: uppercase;
+    font-weight: 600;
 }
 
 .form_contact:hover{
