--- a/style.css
+++ b/style.css
@@ -20,11 +20,14 @@ body{
     color: white;
     font-family: 'Poppins', sans-serif;
     /* max-width: 2200px; */
-    margin: 0;
+    /* margin: 0; */
 }
 
-.box{
-    width: 80%;
+.container{
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    width: 90%;
     max-width: 1200px;
     margin: 0 auto;
     position: relative;
@@ -36,6 +39,9 @@ body{
     position: sticky;
     top: 0;
     z-index: 1;
+    background-color: var(--primary-color-contrast);
+    padding: 1em 0;
+    text-align: center;
 }
 
 .logo{
@@ -65,9 +71,10 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 20px;
+    flex-wrap: wrap;
+    gap: 50px;
     padding: 5px;
-    background-color: var(--primary-color-contrast);
+    
 }
 
 ul{
@@ -76,15 +83,13 @@ ul{
     list-style: none;
     font-weight: 700;
     font-size: 1.2rem;
+    margin: 0;
+    padding: 0;
 }
 
 a{
     text-decoration: none;
     color: var(--primary-color);
-}
-
-.nav_right_section{
-    padding-right: 20px;
 }
 
 li{
@@ -123,12 +128,6 @@ li:hover::after{
 .about:hover{
     transform: translateY(-2px);
     box-shadow: 0px 10px 20px 2px var(--primary-color-contrast);
-}
-
-.container{
-    display: flex;
-    justify-content: space-between;
-    gap: 20px;
 }
 
 .img_about{
@@ -217,10 +216,8 @@ h2{
 
 .classes_main{
     margin: 60px 0 20px 100px;
-    padding-right: 10px;
     border-radius: 17px;
     transition: all ease 0.2s;
-    /* border: 3px solid var(--primary-color-contrast); */
     box-shadow: 0px 5px 10px 0px var(--primary-color-contrast); 
     width: 70%;
     display: flex;
@@ -520,6 +517,12 @@ footer{
     background: var(--primary-color-contrast);
 }
 
+.footer{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
 .footer_header{
     text-transform: capitalize;
     color: var(--primary-color);
@@ -530,19 +533,22 @@ footer{
     display: flex;
     align-items: center;
     gap: 30px;
+    margin: 0;
+    /* padding: 0; */
     padding: 0 20px 20px 20px;
 }
 
 .location_details{
     display: flex;
-    flex-direction: column;
-    gap: 10px;
+    align-self: baseline;
+    flex-wrap: wrap;
+    gap: 50px;
     color: var(--primary-color);
 }
 
 iframe{
-    max-width: 100%;
-    height: 40vh;
+   max-width: 100%;
+   height: 40vh;
 }
 
 h1{
@@ -563,12 +569,18 @@ h4{
 }
 
 @media screen and (767px <= width <= 1023px){
-    .box{
+    .row{
         display: flex;
         flex-direction: column;
         margin: 40px auto;
         justify-content: space-between;
         /* margin: 40px 0; */
+    }
+
+    nav{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
     }
 
     .img_about{
@@ -583,7 +595,7 @@ h4{
 
     .img_training{
         width: 100%;
-        height: 330.66px;
+        /* height: 330.66px; */
         border-radius:0 0 14px 14px;
         object-fit: cover;
         object-position: 100% 0%;
@@ -595,8 +607,8 @@ h4{
     }
 
     .classes_main--img{
-        width: 101.5%;
-        height: 330.66px;
+        width: 100%;
+        /* height: 330.66px; */
         border-radius: 13px 13px 0 0;
     }
 
@@ -632,3 +644,85 @@ h4{
         transform-origin: center;
     }
 } 
+
+@media screen and (max-width: 767px){
+    .location{
+        display: flex;
+        flex-direction: column;
+        padding-bottom: 20px;
+    }
+
+    .row{
+        display: flex;
+        flex-direction: column;
+        margin: 40px auto;
+        justify-content: space-between;
+        /* margin: 40px 0; */
+    }
+
+    nav{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .img_about{
+        max-width: 100%;
+        border-radius: 14px 14px 0 0;
+    }
+
+    .about_box{
+        padding: 0 20px;
+        margin: 0 auto;
+    }
+
+    .img_training{
+        width: 100%;
+        /* height: 330.66px; */
+        border-radius:0 0 14px 14px;
+        object-fit: cover;
+        object-position: 100% 0%;
+    }
+
+    .training_box{
+        padding: 0 20px;
+        margin: 0 auto;
+    }
+
+    .classes_main--img{
+        width: 100%;
+        border-radius: 13px 13px 0 0;
+    }
+
+    .classes_main--text{
+        padding: 0 20px 20px 20px;
+        margin: 0 auto;
+    }
+
+    .link{
+        color: var(--primary-color-contrast);
+        padding: 10px 0 0 0;
+        font-style: italic;
+        font-weight: 600;
+        position: relative;
+        width: 100%;
+    }
+    
+    .link::after{
+        content: '';
+        position: absolute;
+        width: 40%;
+        transform: scaleX(0);
+        height: 3px;
+        bottom: -4px;
+        left: 0;
+        background-color: var(--primary-color-contrast);
+        transform-origin: center;
+        transition: transform 0.25s ease-out;
+    }
+    
+    .link:hover::after{
+        transform: scaleX(1);
+        transform-origin: center;
+    }
+}
