--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ body{
     background-color: var(--primary-color-contrast);
     padding: 1em 0;
     text-align: center;
+    border-bottom: solid 2px var(--primary-color);
 }
 
 .logo{
@@ -67,7 +68,7 @@ body{
     }
 }
 
-nav{
+.nav_flex{
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -239,7 +240,9 @@ h2{
     display: flex;
     flex-direction: column;
     max-width: 100%;
-    margin-bottom: 20px;
+    padding: 0 20px 20px 20px;
+    /* margin-bottom: 20px;
+    margin-left: 40px; */
 }
 
 .link{
@@ -248,13 +251,13 @@ h2{
     font-style: italic;
     font-weight: 600;
     position: relative;
-    width: 100%;
+    max-width: 100%;
 }
 
 .link::after{
     content: '';
     position: absolute;
-    width: 35%;
+    width: 100%;
     transform: scaleX(0);
     height: 3px;
     bottom: -4px;
@@ -267,6 +270,10 @@ h2{
 .link:hover::after{
     transform: scaleX(1);
     transform-origin: center;
+}
+
+.classes{
+    margin-top: 30px;
 }
 
 .classes_text{
@@ -289,9 +296,13 @@ h2{
 
 .classes_table{
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     justify-content: space-between;
+    gap: 50px;
     padding: 0 30px 50px 30px;
+    margin: 0 auto;
+    position: relative;
 }
 
 .class_type{
@@ -301,7 +312,7 @@ h2{
 
 .border_top{
     box-shadow: 0 0 10px var(--primary-color-contrast);
-    clip-path: inset(-30px 1px 0 0);
+    clip-path: inset(-30px 1px 0 1px);
 }
 
 tr{
@@ -332,6 +343,8 @@ td{
 .table_box{
     border-radius: 15px;
     transition: all ease 0.2s;
+    flex-grow: 2;
+    flex-basis: auto;
     /* border: 1px solid var(--primary-color-contrast); */
     /* box-shadow: 0px 5px 10px 0px var(--primary-color-contrast);  */
     width: 16%;
@@ -344,9 +357,15 @@ td{
 
 /* shop section */
 
+.shop{
+    margin-top: 30px;
+}
+
 .shop_container{
     display: flex;
     justify-content: space-between;
+    gap: 40px;
+    flex-wrap: wrap;
     margin: 40px;
 }
 
@@ -365,7 +384,6 @@ td{
     /* border: 1px solid var(--primary-color-contrast); */
     /* box-shadow: 0px 5px 10px 0px var(--primary-color-contrast);  */
     width: 25%;
-    height: 100%;
 }
 
 .shop_box:hover{
@@ -391,6 +409,7 @@ td{
 .price_btn{
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
     gap: 30px;
     margin: 0 10px 10px 10px;
 }
@@ -442,7 +461,6 @@ h3{
 
 .contact_img{
     width: 250px;
-    /* border: 1px solid var(--primary-color-contrast); */
     border-radius: 15px 0 0 15px;
     object-fit: cover;
     object-position: 20%;
@@ -577,7 +595,7 @@ h4{
         /* margin: 40px 0; */
     }
 
-    nav{
+    .nav_flex{
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -595,7 +613,7 @@ h4{
 
     .img_training{
         width: 100%;
-        /* height: 330.66px; */
+        height: 330.66px;
         border-radius:0 0 14px 14px;
         object-fit: cover;
         object-position: 100% 0%;
@@ -608,7 +626,7 @@ h4{
 
     .classes_main--img{
         width: 100%;
-        /* height: 330.66px; */
+        height: 330.66px;
         border-radius: 13px 13px 0 0;
     }
 
@@ -617,31 +635,20 @@ h4{
         margin: 0 auto;
     }
 
-    .link{
-        color: var(--primary-color-contrast);
-        padding: 10px 0 0 0;
-        font-style: italic;
-        font-weight: 600;
-        position: relative;
-        width: 100%;
+    .shop_container{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 40px;
     }
-    
-    .link::after{
-        content: '';
-        position: absolute;
-        width: 40%;
-        transform: scaleX(0);
-        height: 3px;
-        bottom: -4px;
-        left: 0;
-        background-color: var(--primary-color-contrast);
-        transform-origin: center;
-        transition: transform 0.25s ease-out;
+
+    .shop_box{
+        width: 80%;
     }
-    
-    .link:hover::after{
-        transform: scaleX(1);
-        transform-origin: center;
+
+    .img_shop{
+        height: 70vh;
     }
 } 
 
@@ -652,6 +659,13 @@ h4{
         padding-bottom: 20px;
     }
 
+    .footer{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
     .row{
         display: flex;
         flex-direction: column;
@@ -660,7 +674,7 @@ h4{
         /* margin: 40px 0; */
     }
 
-    nav{
+    .nav_flex{
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -699,30 +713,25 @@ h4{
         margin: 0 auto;
     }
 
-    .link{
-        color: var(--primary-color-contrast);
-        padding: 10px 0 0 0;
-        font-style: italic;
-        font-weight: 600;
-        position: relative;
+    .shop_container{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 40px;
+    }
+
+    .shop_box{
+        width: 80%;
+    }
+
+    .form_contact{
+        flex-direction: column;
+    }
+
+    .contact_img{
         width: 100%;
-    }
-    
-    .link::after{
-        content: '';
-        position: absolute;
-        width: 40%;
-        transform: scaleX(0);
-        height: 3px;
-        bottom: -4px;
-        left: 0;
-        background-color: var(--primary-color-contrast);
-        transform-origin: center;
-        transition: transform 0.25s ease-out;
-    }
-    
-    .link:hover::after{
-        transform: scaleX(1);
-        transform-origin: center;
+        height: 40vh;
+        border-radius: 15px 15px 0 0;
     }
 }
