--- a/style.css
+++ b/style.css
@@ -740,8 +740,12 @@ h4{
         width: 90%;
     }
 
-    .contact_img{
+    .form_contact{
         width: 90%;
+    }
+
+    .contact_img{
+        width: 100%;
         height: 40vh;
         border-radius: 15px 15px 0 0;
     }
